# chess-game

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
include/chess-game/: game.hxx
include/chess-game/board/: board.hxx  cell.hxx
include/chess-game/board/cell/: cell.hxx  coordinates.hxx
include/chess-game/pieces/: piece.hxx
include/chess-game/player/: player.hxx
src/: game.cxx  main.cxx
src/board/: board.cxx  cell.cxx
src/board/cell/: cell.cxx  coordinates.cxx
src/pieces/: piece.cxx
src/player/: player.cxx
